Uncommented social buttons, fixed alignment.

--- a/churnalism_us/static/styles/main.css
+++ b/churnalism_us/static/styles/main.css
@@ -126,7 +126,7 @@ body { background: url(../images/bg.jpg) top left repeat;}
 .withTip { margin-bottom: 10px;}
 
 h1 { width: 100%; height: 90px; float: left; margin: 15px 0px;}
-h1 a.logo { width: 197px; height: 70px; background: url(../images/logo.png) top left no-repeat;}
+h1 a.logo { display: inline-block; width: 197px; height: 70px; background: url(../images/logo.png) top left no-repeat;}
 
 h2 { color: #252323; text-transform: uppercase; font-size: 250%; font-weight: normal; text-transform: capitalize; margin-bottom: 25px; line-height: 30px;}
 .smallHeader { text-transform: uppercase; font-size: 130%; color: #454542; margin-bottom: 15px; line-height: 18px; margin-top:20px;}
@@ -153,7 +153,7 @@ nav li a { width: 88px; height: 45px; }
 #logo_sunlight { background: url(../images/logo_sunlight.jpg) left 3px no-repeat; float: left; width: 98px;}
 #sunlight { background: url(../images/nav_sunlight.jpg) top left no-repeat; }
 
-#share { float: right; margin-top: 0px; font-size: 95%; margin-right: 15px;}
+#share { float: right; margin-top: 0px; font-size: 95%; margin-right: 34px; vertical-align: top; }
 #share label { margin-top: 17px; float: left; margin-right: 5px;}
 #share input { padding: 4px 5px 2px; width: 130px; float: left; margin-top:12px;}
 #gigya-share { float:left; margin: 5px 0 0 10px; }
